FIX Popup size mainly + slight design changes
REF: [#97 - Fix horizontal scrollbar](https://trello.com/c/iWCy9XB5/97)
REF: [#98 - Larger popup](https://trello.com/c/hmh9Dqzc/98)

Other
-----
* Update fontello package : less unused stuff, 1 new icon
* Slightly darker link title and "check" icon
* Friendlier message for "not found" (with 1 new icon)

--- a/font/fontello.css
+++ b/font/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?74783633');
-  src: url('../font/fontello.eot?74783633#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?74783633') format('woff2'),
-       url('../font/fontello.woff?74783633') format('woff'),
-       url('../font/fontello.ttf?74783633') format('truetype'),
-       url('../font/fontello.svg?74783633#fontello') format('svg');
+  src: url('../font/fontello.eot?13834577');
+  src: url('../font/fontello.eot?13834577#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?13834577') format('woff2'),
+       url('../font/fontello.woff?13834577') format('woff'),
+       url('../font/fontello.ttf?13834577') format('truetype'),
+       url('../font/fontello.svg?13834577#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?74783633#fontello') format('svg');
+    src: url('../font/fontello.svg?13834577#fontello') format('svg');
   }
 }
 */
@@ -55,19 +55,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-ok:before { content: '\e801'; } /* '' */
-.icon-cancel:before { content: '\e804'; } /* '' */
-.icon-heart-empty:before { content: '\e805'; } /* '' */
-.icon-heart:before { content: '\e806'; } /* '' */
-.icon-cancel-1:before { content: '\e807'; } /* '' */
-.icon-star:before { content: '\e80e'; } /* '' */
-.icon-star-empty:before { content: '\e80f'; } /* '' */
-.icon-check:before { content: '\e810'; } /* '' */
-.icon-ccw:before { content: '\e811'; } /* '' */
-.icon-plus-circled:before { content: '\e813'; } /* '' */
-.icon-plus-circled-thin:before { content: '\e814'; } /* '' */
-.icon-bookmark-thin:before { content: '\e815'; } /* '' */
-.icon-bookmark:before { content: '\e816'; } /* '' */
-.icon-bookmark-empty:before { content: '\e817'; } /* '' */
-.icon-bookmark-fat:before { content: '\e818'; } /* '' */
-.icon-bookmark-fat-empty:before { content: '\f097'; } /* '' */
+.icon-plus-circled:before { content: '\e801'; } /* '' */
+.icon-ccw:before { content: '\e803'; } /* '' */
+.icon-ok:before { content: '\e804'; } /* '' */
+.icon-emo-surprised:before { content: '\e806'; } /* '' */
