--- a/src/popup/list.css
+++ b/src/popup/list.css
@@ -1,6 +1,6 @@
 html, body {
-  width: 350px;
-  height: 400px;
+  width: 450px;
+  height: 550px;
   font-size: 65%;
   padding: 0px;
   margin: 0px;
@@ -24,12 +24,12 @@ section {
 /* TODO Use flexbox for this component and its content instead
  *      of hard-coded heights */
 .authenticated {
-  height: 400px;
+  height: 550px;
 }
 
 .list-component {
   width: 100%;
-  height: 357px;
+  height: 507px;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -62,9 +62,9 @@ section {
 }
 
 .list-component .item .title {
-  font-size: 1.15rem;
+  font-size: 1.2rem;
   font-weight: bold;
-  color: #666;
+  color: #555;
 }
 
 .list-component .item:hover .title {
@@ -96,7 +96,7 @@ section {
   color: white;
   font-size: 1.1rem;
   text-align: center;
-  background-color: #bbb;
+  background-color: #aaa;
   border-radius: 20px;
   opacity: 0.4;
 }
@@ -131,8 +131,9 @@ section {
   padding-top: 2rem;
   text-align: center;
 
-  font-size: 1.15rem;
+  font-size: 1.5rem;
   font-weight: bold;
+  color: #444;
 }
 
 
